--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bilioteca
+name: Biblioteca
 description: Projeto de exemplo de componentes Flutter
 
 # The following line prevents the package from being accidentally published to 
